--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ drf-yasg==1.21.7
 idna==3.7
 inflection==0.5.1
 packaging==24.0
-pillow==10.3.0
+pillow==10.4.0
 psycopg2==2.9.9
 PyJWT==2.8.0
 pyTelegramBotAPI==4.19.1
@@ -27,3 +27,8 @@ telegram==0.0.1
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+#production
+whitenoise==6.6.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
